# sportsrank

./: ..gitignore.un~  .firebaserc  .gitignore  CFB_SYSTEM_REVIEW.md  CNAME  README.md  cfb.html  cors.py  db_schema.py  firebase.json  games.py  index.html  mainpage.py  package-lock.json  package.json  pyproject.toml  ranking.py  records.py  sportsrank.db  spread.py  teams.py  tsconfig.json  vite.config.ts  webconfig.py
.firebase/: hosting.d2Vic2l0ZQ.cache
.github/: copilot-instructions.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
cfb/: README.md  __init__.py  all_time.py  calc.py  config.py  cors.py  end_week.py  folders.py  games.py  html_grab.py  main.py  nc_wt_clean.py  pyth.py  rankings_pipeline.py  readjust.py  records.py  requirements.txt  run_cfb_rankings.bat  site_paths.py  spread.py  spread_results.py  talent.py  teams.py
data/2022_data/: 2022_fbs_results.html  2022_fbs_teams.html
data/2023_data/: 2023_fbs_teams.html
frontend/: rankings-app.css  rankings-app.ts
nfl/: nfl_spread.py  nfl_teams.py
rankings/2022_rankings/: 2022_W1_fbs_cors.html
simbba/: api.py  calc.py  config.py  cors.py  end_week.py  main.py  spread.py
simcbb/: calc.py  config.py  games.py  html_grab.py  main.py  nc_wt_clean.py  records.py  spread.py  teams.py
simcfb/: all_time.py  calc.py  config.py  folders.py  games.py  html_grab.py  main.py  spread.py  teams.py
spread/2022_spread/: 2022_W1_fbs_spread.html
tests/: test_rankings_pipeline.py
tests/fixtures/: rankings_baseline.json
website/: index.html
website/cfb/: cfb.html
(+22080 files in other folders)
