[project]
name = "sportsrank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cfbd>=5.7.0",
    "html5lib>=1.1.0",
    "lxml>=4.9.0",
    "numpy<2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "six>=1.16.0",
    "soupsieve>=2.5.0",
    "webencodings>=0.5.1",
]
